--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
     <div class="logmod">
 	<div class="image" title="queregalo">
-		<img src="../images/logo.png">
+		<img src="../queRegalo/images/logo.png">
 		</div>
   <div class="logmod__wrapper">
     <span class="logmod__close">Cerrar</span>
