--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-
+	<link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="../queRegalo/images/logo.ico">
         <link rel="stylesheet" href="css/style.css">
   </head>
 
