--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/header-user-dropdown.css">
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
+	    <link rel="stylesheet" href="css/image-picker.css">
 	<link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="../queRegalo/images/logo.ico">
   </head>
 
@@ -69,22 +70,15 @@
 				</div>
 			 </div>
 			<div id="sex" class="col-md-8 col-sm-8" style="display: none;" >
-				<h1 align="center" class="title">&iquest;Sexo del agazajad@?</h1>
-				<div class="row">
-					<div class="col-md-4">
-						<img id="image1" 
-						 class="crop-img itemImg center-block" src="../queRegalo/images/mujer.png" alt="graffittied building" onclick=""/> 
-					</div>
-					<div class="col-md-4">
-						<img id="image2" class="crop-img itemImg center-block" src="../queRegalo/images/hombre.png" alt="display of cheese"/> 
-					</div>
-					<div class="col-md-4">
-						<img id="image3" class="crop-img itemImg center-block" src="../queRegalo/images/unisex.png" alt="synethesizer workshop"/> 
-					</div>
-
-				</div>
+				<h1 align="center" class="title">Elige el sexo del/la agazajad@?</h1>
+				<select  class="image-picker show-html centre">
+				  <option value=""></option>
+				  <option data-img-src="../queRegalo/images/mujer.png" value="1">mujer</option>
+				  <option data-img-src="../queRegalo/images/hombre.png" value="2">hombre</option>
+				  <option data-img-src="../queRegalo/images/unisex.png" value="3">unisex</option>
+				</select>
 				<div class="form-actions">
-				<button type="button" class="btn btn-default" onclick="action('years');">Continuar!</button>
+				<button type="button" class="btn btn-default" onclick="action('years');">Continuar</button>
 				</div>
 			 </div>		 
 			 <div id="years" class="col-md-8 col-sm-8" style="display: none;" >
@@ -93,7 +87,7 @@
 				<input align="center" type="text" class="form-control edadinput" id="edad">
 				</div>
 				<div class="form-actions">
-				<button id ="btn" type="button" class="btn btn-default" onclick="action('likes');" disabled >Continuar!</button>
+				<button id ="btn" type="button" class="btn btn-default" onclick="action('likes');" disabled >Continuar</button>
 				</div>
 			 </div>
 			 <div id="likes" class="col-md-8 col-sm-8" style="display: none;">
@@ -136,6 +130,8 @@
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
 	<script src="js/actions.js"></script>
+	<script src="js/image-picker.js"></script>
+	<script src="js/image-picker.min.js"></script>
 	<script>
 
    var divs = ["main", "sex", "years", "likes"];
@@ -173,6 +169,7 @@ $(".edadinput").change(function(){
         $("#btn").attr('disabled',true);
 });
 
+$("select").imagepicker();
 
   </script>
 
