--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
 				<a><img src="../queRegalo/images/marca3.png" class="img2"></a>
 				<a><img src="../queRegalo/images/marca4.png" class="img2"></a>
 			</div>
-			<div id="main" class="col-md-8 col-sm-8" style="display: none;">
+			<div id="main" class="col-md-8 col-sm-8" style="display: block;">
 				<a><img src="../queRegalo/images/tituloFoto.png" class="center-block mainPhoto" onclick="action('sex');"></a>
 				<h1>Destacados</h1>
 				<div class="row">
@@ -114,7 +114,7 @@
 				<button id ="btn" type="button" class="btn btn-default" onclick="action('recommendation');" >Continuar</button>
 				</div>
 			 </div>
-			  <div id="recommendation" class="col-md-8 col-sm-8" style="display: block;">
+			  <div id="recommendation" class="col-md-8 col-sm-8" style="display: none;">
 				<h1>El Regalo Perfecto</h1>
 		<div class="container">
 			<div id="cbp-pgcontainer">
